# dora-pkg-mngr

./: .gitignore  Cargo.toml
binaries/cli/: Cargo.toml
binaries/cli/src/command/: install.rs  mod.rs  publish.rs
examples/python-log/: dataflow.yaml  main.py  pyproject.toml
examples/python-log/receive_data/: dora.toml
examples/python-log/send_data/: dora.toml
libraries/dora-package-manager/: Cargo.toml  dora.toml
libraries/dora-package-manager/src/: lib.rs  manifest.rs  package.rs  packager.rs  registry_client.rs
libraries/dora-package-manager/src/registry/: download.rs  mod.rs
registry-server/: Cargo.toml
registry-server/.sqlx/: query-f93c8657f4464506a55ebc50a5eef1f8584f3ad16d452c19b943b226539d6538.json  query-f9c4ff9d83f943278bc1de6413413334b32c439d0e5e2aabdedb3d20066f28ae.json
registry-server/migrations/: 20260317065809_init.sql
registry-server/src/: main.rs  manifest.rs
registry-server/src/services/: db.rs  install.rs  mod.rs  publish.rs
registry-server/src/utils/: hash.rs
