[package]
name = "registry-server"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
description.workspace = true
documentation.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
actix-web = "4"
actix-cors = "0.7.1"
env_logger = "0.11.8"
log = "0.4.27"
serde_json = "1.0.140"
