[package]
name = "dora-package-manager"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
description.workspace = true
documentation.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
reqwest = { version = "0.11", features = ["multipart"] }
tar = "0.4"
flate2 = "1.0"
walkdir = "2"
ignore = "0.4.25"
eyre = "0.6.8"
tokio = { version = "1", features = ["full"] }
